src/content/docs/sdk/react-native/v5/index.mdx
---
title: React Native SDK integration guide
description:
   Use the React Native SDK to access Adjust's features in your React Native
   apps
category-title: React Native SDK
slug: en/sdk/react-native
sidebar-position: 4
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/react-native/v4
---

The Adjust React Native SDK enables you to measure attribution, events, and much more in your React Native app. Follow the steps in this guide to set up your app to work with the Adjust SDK. You can also check out the example apps on [GitHub](https://github.com/adjust/react_native_sdk/tree/master/example).

<Callout type="important">

The Adjust SDK supports iOS 12 or later and Android API level 21 (Lollipop) or later.

</Callout>

## 1. Add the SDK to your project {#add-the-sdk-to-your-project}

To use the Adjust SDK in your React Native app, you need to add it to your project. Follow these steps to add it:

1. Download the React Native library using one of the following options.

```console
$ npm install react-native-adjust@$REACT_NATIVE_V5_VERSION --save
```

2. Install the CocoaPods dependencies for your iOS app by running the following command on your terminal:

```console
$ cd ios && pod install
```

## 2. Integrate the SDK {#integrate-the-sdk}

To integrate the SDK with your project, you must import Adjust's SDK configuration to your main app Javascript file.

Add the following line at the beginning of your app's `.js` file:

```js
import { Adjust, AdjustConfig } from "react-native-adjust";
```

## 3. Initialize the Adjust SDK {#initialize-the-adjust-sdk}

Make sure you initialize the Adjust SDK as soon as possible in your React Native app. To do this, initialize your config object with your app token and the environment you want to run your application in. Add the following lines of code to your app's `.js` file:

```js
constructor(props) {
   super(props);
   const adjustConfig = new AdjustConfig("{YourAppToken}", AdjustConfig.EnvironmentSandbox);
   Adjust.initSdk(adjustConfig);
}

componentWillUnmount() {
   Adjust.componentWillUnmount();
}
```

Pass the `AdjustConfig` arguments:

-  Replace `{YourAppToken}` with your token. See [App settings](https://help.adjust.com/en/article/app-settings#view-your-app-token) for instructions on how to find your token.
-  Choose your Environment:
   -  Use `AdjustConfig.EnvironmentSandbox` if you are testing your app and want to send test data. You need to enable [sandbox mode](https://help.adjust.com/en/article/filter-data#sandbox) in the dashboard to see test data.
   -  Use `AdjustConfig.EnvironmentProduction` when you have finished testing and are ready to release your app.

<Callout type="important">

When running tests, ensure that your environment is set to `AdjustEnvironment.sandbox`. Change this to `AdjustEnvironment.production` before you submit your application to the app store.

</Callout>

## 4. Set up Android devices {#set-up-android-devices}

### Add permissions {#add-permissions}

The Adjust SDK requires certain permissions to access information.

-  `INTERNET`: Added automatically to the Adjust Android SDK. You don't need to add it manually.

You can also add optional permissions that allow you to access additional information.

-  `ACCESS_NETWORK_STATE` (Optional): You can add this to your `AndroidManifest.xml` file to read certain parameters that might be useful for you.

<CodeBlock title="AndroidManifest.xml">

```xml
<uses-permission android:name="android.permission.INTERNET"/>
<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
```

</CodeBlock>

The Adjust SDK includes the `com.google.android.gms.AD_ID` permission by default in version 4.32.0 and above. You can remove it by adding a `remove` directive if need to make your app COPPA-compliant or if you don't target the Google Play Store.

<CodeBlock title="AndroidManifest.xml">

```xml
<uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
```

</CodeBlock>

<Callout type="seealso">

See Google's [`AdvertisingIdClient.Info`](https://developers.google.com/android/reference/com/google/android/gms/ads/identifier/AdvertisingIdClient.Info#public-string-getid) documentation for more information about this permission.

</Callout>

### Add Google Play Services {#add-google-play-services}

Apps that target the Google Play Store must use the [Google Advertising ID](https://support.google.com/googleplay/android-developer/answer/6048248?hl=en) (`gps_adid`) to identify devices. To do this, Add the following dependency to the `dependencies` section of your `build.gradle` file.

<CodeBlock title="build.gradle">

```groovy
implementation 'com.google.android.gms:play-services-ads-identifier:18.1.0'
```

</CodeBlock>

<Callout type="note">

The Adjust SDK isn't tied to any version of the `play-services-ads-identifier` dependency. You can use the any version of the Google Play Services library.

</Callout>

### Set up install referrer {#set-up-install-referrer}

The install referrer is an attribution mechanism you can use to attribute an app install to a source. It consists of two parts:

-  [x] A set of APIs from these app stores that allow developers to retrieve referral content in their apps.
-  [x] A `referrer` parameter that app stores, such as Google Play and Huawei App Gallery, accept in their app page URLs on their store websites. Here is how the referrer parameter is populated:
   -  When a user clicks on an Adjust link, the Adjust server passes a unique identifier called `reftag`. This identifier is assigned to the click and into the referrer parameter. To know more about reftag, visit [Reftag](https://help.adjust.com/en/article/reftag).
   -  When you run [Google Ads](https://support.google.com/google-ads/answer/6357635?hl=en) campaigns, Google passes a unique identifier called `gclid` into the referrer parameter. You must have **Auto-tagging** turned on in your Google Ads account.

<Callout type="note">

Although install referrer isn't required, it's highly recommended to improve attribution precision.

</Callout>

#### Google Play Referrer API {#google-play-referrer-api}

To support the [Google Play Referrer API](https://developer.android.com/google/play/installreferrer):

1. Add the following line in the **dependencies block** of your top-level `build.gradle` file:

<CodeBlock title="build.gradle">

```groovy
dependencies {
//...
implementation 'com.android.installreferrer:installreferrer:2.2'
//...
}

```

</CodeBlock>

2. The `installreferrer` library is part of **Google Maven** repository. You need to add Google Maven repository to your app's top-level `build.gradle` file to build your app:

<CodeBlock title="build.gradle">

```groovy
allprojects {
   repositories {
      maven {
         url "https://maven.google.com"
      }
   }
}


```

</CodeBlock>

#### Meta referrer integration {#meta-referrer-integration}

The Adjust SDK supports the [Meta Install Referrer](https://developers.facebook.com/docs/app-ads/meta-install-referrer) using the Adjust Meta Install Referrer plugin. [See the React Native Meta Install Referrer plugin for integration details](/en/sdk/react-native/plugins/meta-referrer-plugin).

## 5. Add iOS frameworks {#add-ios-frameworks}

The Adjust SDK is able to get extra information when you include certain iOS frameworks in your app. These frameworks enable certain SDK features, but they're not mandatory for the SDK to work normally. You can add the frameworks and then mark them as **Optional** in **Project Settings --> Build Phases --> Link Binary With Libraries**.

| Framework                             | Description                                                                                                                                          | Notes                                                                                 |
| ------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------- |
| **AdSupport.framework**               | This framework is needed so that the SDK can access the IDFA value and, before iOS 14, AT information.                                               | If your app is targeting the "Kids" category, you shouldn't implement this framework. |
| **AdServices.framework**              | This framework is needed to handle Apple Search Ads attribution.                                                                                     |                                                                                       |
| **StoreKit.framework**                | This framework is needed to access the SKAdNetwork framework and for the Adjust SDK to andle communication with it automatically in iOS 14 or later. |                                                                                       |
| **AppTrackingTransparency.framework** | This framework is needed in iOS 14 and later for the SDK to be able to wrap he user ATT consent dialog and access the user’s consent response.       | If your app is targeting the "Kids" category, you shouldn't implement this framework. |

## 6. Set up SDK Signature {#set-up-sdk-signature}

SDK v5 includes the [SDK signature library](https://help.adjust.com/en/article/sdk-signature). Follow the testing guide for [iOS](/en/sdk/ios/integrations/signature-library#test-your-app) and [Android](/en/sdk/android/integrations/signature-library#test-your-app) to ensure your integration works.

Signature protection is inactive by default. To enable it, you need to:

1. [Enforce signature validation](https://help.adjust.com/en/article/sdk-signature#enforce-signature-validation).
2. [Provide your app's SHA-1 fingerprints](https://help.adjust.com/en/article/sdk-signature#manage-your-certificate-fingerprints) prior to testing.

## 7. Test your integration {#test-your-integration}

The Adjust SDK provides tools for testing and troubleshooting issues with your integration. To test your setup:

-  Set your environment to `AdjustConfig.EnvironmentSandbox`.
-  Add a [sandbox filter](https://help.adjust.com/en/article/filter-data#sandbox) to your Adjust dashboard results.
-  Set your log level to `AdjustConfig.LogLevelVerbose`.

<Callout type="tip">

If you encounter any issues, email support@adjust.com with all details and logs.

</Callout>

### Test Google Play Services integration {#test-google-play-services-integration}

To test that the Adjust SDK can receive a device's Google Advertising ID, set the log level to `AdjustConfig.LogLevelVerbose` and the environment to `AdjustConfig.EnvironmentSandbox`. Start your app and record a session or an event. The SDK logs the `gps_adid` parameter if it has read the advertising ID.

If you're having issues retrieving the Google Advertising ID, open an issue on the SDK [GitHub repository](https://github.com/adjust/react_native_sdk) or contact support@adjust.com.
